--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -33,6 +33,11 @@ jobs:
     env:
       HUGO_VERSION: 0.128.0
     steps:
+      - name: Set Up Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16"
+          cache: ${{ steps.detect-package-manager.outputs.manager }}
       - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
